Fix CSS for grids - font was way too big.

--- a/skins/bluebox/assets/css/jquery.custom.css
+++ b/skins/bluebox/assets/css/jquery.custom.css
@@ -155,5 +155,5 @@ form.form .field .asmList {
 }
 
 .ui-widget {
-    font-size: 1em !important;
+    font-size: 11px;
 }
